Fixes to spacing and breakpoints

--- a/embeds/membership-july-16/style.scss
+++ b/embeds/membership-july-16/style.scss
@@ -11,7 +11,7 @@ $mq-breakpoints: (
 
 @import 'shared/_imports';
 
-$c-background: #AAD8F1;
+$c-background: #AAD8F1; 
 
 @mixin backgroundimage($background, $url, $size){
     background: $background;
@@ -33,29 +33,25 @@ section#membership-july-16 a.fc-trail__count{
     height: 300px; 
 
     @include mq($until: desktop){
-        height: 280px;
+        height: 260px;
     }
 
     @include mq($until: tablet){
         width: 100%;
     }
 
-    @include mq($until: phablet){
-        /*height: 93px;*/
-    }  
-
-    @include mq($until: mobile){
-        /*height: 300px;*/
+    @include mq($until: mobileLandscape){
+        height: 250px;
     }
 
     .membership-july-16__quote-mark {
-    	width: 90px;
+    	width: 80px;
     	position: absolute;
     	top:15px;
     	left:30px;
 
 	    	@include mq($until: desktop){
-                width: 90px;
+                width: 80px;
             }
 
             @include mq($until: phablet){
@@ -64,8 +60,12 @@ section#membership-july-16 a.fc-trail__count{
             }
 
              @include mq($until: mobileLandscape){
-		        width: 60px;
+		        display: none;
 		    }
+
+            @include mq($until: mobile){
+               display: none;
+            }
     }
 
 
@@ -73,8 +73,13 @@ section#membership-july-16 a.fc-trail__count{
     	display: block;
     	font-family: $f-serif-headline;
     	color: #fff;
-    	font-size: 2rem;
-	    line-height: 2.4rem;
+    	font-size: 2.1rem;
+	    line-height: 2.5rem;
+
+            @include mq($until: wide){
+                font-size: 2rem;
+                line-height: 2.4rem;
+            }
 
 		    @include mq($until: leftCol){
 		    	font-size: 1.7rem;
@@ -82,19 +87,24 @@ section#membership-july-16 a.fc-trail__count{
             }
             
             @include mq($until: desktop){
-                font-size: 1.4rem;
+                font-size: 1.5rem;
 			    line-height: 1.8rem;
             }
 
             @include mq($until: phablet){
-                font-size: 1.2rem;
-			    line-height: 1.6rem;
+                font-size: 1.5rem;
+			    line-height: 1.8rem;
+            }
+
+            @include mq($until: mobileLandscape){
+                font-size: 1.3rem;
+                line-height: 1.5rem;
             }
 
     }
 
     .quote {
-    	margin: 78px 0 0 30px;
+    	margin: 66px 0 0 30px;
     	width: 650px;
 
 	    	@include mq($until: leftCol){
@@ -102,30 +112,60 @@ section#membership-july-16 a.fc-trail__count{
             }
 
             @include mq($until: desktop){
-                width: 400px;
-                margin-top:85px;
+                width: 345px;
+                margin-top:68px;
             }
 
             @include mq($until: phablet){
-                width: 280px;
+                width: 300px;
                 margin-left: 10px
             }
 
             @include mq($until: mobileLandscape){
-                margin-top: 65px;
+                width: 200px;
+                margin-top: 12px;
             }
     }
 
     .name {
     	font-weight: 100;
     	margin: 2px 0 0 30px;
+        font-size: 1.6rem;
+        line-height: 2.4rem;
+        
+            /*@include mq($until: wide){
+                line-height: 2.3rem;
+            }*/
 
-    	 @include mq($until: desktop){
+            @include mq($until: leftCol){
+                font-size: 1.5rem;
+            }
+
+        	 @include mq($until: desktop){
                 margin-top: 5px;
+                font-size: 1.2rem;
+                line-height: 1.6rem;
             }
 
             @include mq($until: phablet){
-                margin-left: 10px
+                margin-left: 10px;
+                font-size: 1rem;
+                line-height: 1.4rem;
+            }
+
+            @include mq($until: mobileLandscape){
+                font-size: 1rem;
+                line-height: 1.3rem;
+                width: 148px;
+            }
+    }
+
+    .link-button {
+        position: absolute;
+        bottom: 15px;
+
+            @include mq($until: mobileLandscape){
+                bottom:58px;
             }
     }
 
@@ -134,22 +174,21 @@ section#membership-july-16 a.fc-trail__count{
 	    padding: 5px 16px;
 	    border: .6px solid #fff;
 	    border-radius: 100px;
-	    margin: 15px 0 0 30px;
+	    margin: 10px 0 0 30px;
 
 		    @include mq($until: desktop){
                 padding: 4px 14px;
+                margin-top: 12px;
             }
 
             @include mq($until: phablet){
-                margin-left: 10px
+                margin-left: 10px;
+                margin-top: 9px;
             }
 
             @include mq($until: mobileLandscape){
-            	margin-top: 10px;
-            }
-
-            @include mq($until: mobile){
-            	margin-top: 20px;
+            	margin-top: 9px;
+                padding: 2px 14px;
             }
 
     	p {
@@ -172,6 +211,10 @@ section#membership-july-16 a.fc-trail__count{
     		margin-left: 5px;
     		vertical-align: middle;
 
+            @include mq($until: mobileLandscape){
+                width: 20px;
+            }
+
     	}
     }
 
@@ -190,22 +233,23 @@ section#membership-july-16 a.fc-trail__count{
 
     .membership-july-16__logo {
     	position: absolute;
-    	bottom:10px;
+    	bottom:15px;
     	right:300px;
-    	width:130px;
+    	width:160px;
     	z-index: 9;
 
 	    	@include mq($until: desktop){
                 right:220px;
+                width:120px;
             }
 
             @include mq($until: phablet){
                 right: 135px;
-                width: 110px;
             }
 
             @include mq($until: mobileLandscape){
                 left:10px;
+                width: 110px;
             }
     }
 
@@ -228,22 +272,23 @@ section#membership-july-16 a.fc-trail__count{
             @include mq($until: mobileLandscape){
                 width: 180px;
             }
+
     }
 
     .membership-july-16__g-logo {
     	position: absolute;
     	top: 10px;
     	right:10px;
+        width:50px;
 
 	    	@include mq($until: phablet){
 				top: 10px;
 				right: 0px;
-				width: 50px;
             }
 
             @include mq($until: mobileLandscape){
-				top: 7px;
-				width: 44px;
+				top: 5px;
+				width: 35px;
             }
 
     }
@@ -257,6 +302,10 @@ section#membership-july-16 a.fc-trail__count{
 	    	@include mq($until: desktop){
                 width:400px;
                 height: auto;
+            }
+
+            @include mq($until: tablet){
+                width:380px;
             }
 
             @include mq($until: phablet){
